--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 lang: en
-title: Avalanche Guard
+title: AvalancheGuard
+description: AI-powered Avalanche Observations
 copyright: © 2021. All rights reserved.
 
 accent_image: /assets/img/sidebar-bg.jpg
